--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>goit-js-hw-12</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -15,13 +15,11 @@
         type="text"
         name="search-input"
         placeholder="Search images..."
-        />
-      <button class="search-btn" type="submit">Search</button>
+      /><button class="search-btn" type="submit">Search</button>
     </form>
-    <span class="loader-hidden visually-hidden"></span>
-    <ul class="gallery">
-      </ul>
-      
-       <script type="module" src="./main.js"></script>
+    <ul class="gallery"></ul>
+    <span class="loader visually-hidden"></span>
+    <button class="load-btn visually-hidden" type="button">Load more</button>
+        <script type="module" src="./main.js"></script>
   </body>
 </html>
